--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ links:
   - name:         About
     url:          /about
   - name:         Blog
-    url:          http://muan.co
+    url:          http://danileyang.github.io/
     external:     true
   - name:         GitHub
-    url:          http://github.com/muan
+    url:          http://github.com/danileyang
     external:     true
 highlighter:      pygments
 permalink:        pretty
